k8s/applications/public/synapse/Deployment.yaml
# https://github.com/element-hq/synapse/tree/develop/docker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: synapse
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: matrix-server
      app.kubernetes.io/part-of: synapse
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: synapse
      labels:
        app.kubernetes.io/name: synapse
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: matrix-server
        app.kubernetes.io/part-of: synapse
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: synapse
      securityContext:
        runAsNonRoot: true
        runAsUser: 991
        runAsGroup: 991
        fsGroup: 991
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: synapse
          # Dockerfile: https://github.com/element-hq/synapse/blob/develop/docker/Dockerfile
          image: ghcr.io/element-hq/synapse:v1.162.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 512Mi}
            limits: {memory: 768Mi}
          ports:
            - {name: http, containerPort: 8080}
            - {name: metrics, containerPort: 8081}
            - {name: health, containerPort: 8082}
          startupProbe: {httpGet: {port: 8082, path: /health}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 8082, path: /health}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 8082, path: /health}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: data-volume, mountPath: /data, subPath: synapse-data}
            - {name: tmp-volume, mountPath: /tmp}
            - {name: log-volume, mountPath: /var/log}
            - {name: generated-config-volume, mountPath: /generated-config, readOnly: true}
            - {name: synapse-config-volume, mountPath: /karlsen.fr.log.config, subPath: karlsen.fr.log.config, readOnly: true}
            - {name: synapse-secrets-volume, mountPath: /karlsen.fr.signing.key, subPath: karlsen.fr.signing.key, readOnly: true}
            - {name: synapse-secrets-volume, mountPath: /secrets/mas-shared.key, subPath: mas-shared.key, readOnly: true}
      volumes:
        - {name: data-volume, persistentVolumeClaim: {claimName: synapse-data-pvc}}
        - {name: tmp-volume, emptyDir: {}}
        - {name: log-volume, emptyDir: {}}
        - {name: generated-config-volume, emptyDir: {}}
        - {name: synapse-config-volume, configMap: {name: synapse-config}}
        - {name: synapse-secrets-volume, secret: {secretName: synapse-secrets}}
