k8s/applications/public/synapse/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: synapse
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: synapse
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
