k8s/applications/public/synapse/BackendTrafficPolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: synapse-timeout
  namespace: synapse
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: web}
  timeout: {http: {requestTimeout: 60s}}
