k8s/applications/public/synapse/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-synapse
  namespace: synapse
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: synapse}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8082', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Envoy Gateway
  egress:
    # - {toFQDNs: [matchName: db02.hera.home.karlsen.fr], toPorts: [ports: [{port: '5432', protocol: TCP}]]}  # Covered by world
    # - {toFQDNs: [matchName: smtp.domeneshop.no], toPorts: [ports: [{port: '465', protocol: TCP}]]}  # Covered by world
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}}], toPorts: [ports: [{port: '10443', protocol: TCP}]]}
    - {toEntities: [world]}  # cluster, host
